--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   get: 4.6.1
   get_storage: ^2.0.3
   google_fonts: ^2.3.1
+  sqflite: ^2.0.2
   timezone: ^0.8.0
 
 dev_dependencies:
