--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,6 +6,7 @@ environment:
   sdk: ">=2.16.1 <3.0.0"
 
 dependencies:
+  camera: ^0.9.7+1
   carousel_slider: ^4.0.0
   cupertino_icons: ^1.0.2
   curved_navigation_bar: ^1.0.3
@@ -13,13 +14,17 @@ dependencies:
   floating_action_bubble: ^1.1.4
   flutter:
     sdk: flutter
+  flutter_compass: ^0.7.0
   flutter_local_notifications: ^9.4.0
   font_awesome_flutter: ^10.1.0
   get: 4.6.1
   get_storage: ^2.0.3
   google_fonts: ^2.3.1
+  image_picker: ^0.8.5+3
+  permission_handler: ^9.2.0
   sqflite: ^2.0.2
   timezone: ^0.8.0
+  video_player: ^2.4.4
 
 dev_dependencies:
   flutter_lints: ^1.0.0
